--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -1,6 +1,6 @@
   <html>
     <head>
-        <title>Colored Button</title>
+        <title>ToDo List</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./assets/style.css">
     </head>
