--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Animated Cradit Card</title>
+        <title>Create New Account</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./assets/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
